9-21-2023

================================
Change log notes
================================

Linux v2.37.2 | macOS v0.21 | Termux v2.37
Updated the Linux auto dependencies.txt file to include:
If you get an error message:
"chmod: cannot access '/usr/bin/yt-dlp': No such file or directory"
Then copy and paste again, yt-dlp did not get downloaded.

Linux v2.37.1 | macOS v0.21 | Termux v2.37
Added support for zsh shell to just press y to load yt-playlist on Linux.

Linux v2.37 | macOS v0.21 | Termux v2.37
Fixed not installing on Linux mint, maybe other debian based Linux.
Added jemalloc to the list of auto dependencies for debian based Linux.
Fixed jemalloc on Linux and macOS it was not working correct.
Fixed Permission denied on macOS beta when trying to run yt-playlist.
Upated the uninstall.sh on all three.

Also if you guys are having issues, you always can open an issue.

Linux v2.36.2 | macOS v0.20.2 | Termux v2.36.2
Just some small changes to the yt-playlist code, regarding downloading audio and video.

Linux v2.36.1 | macOS v0.20.1 | Termux v2.36.1
Fixed bug with the changes I made in the last version. If you typed in the wrong argument, then yt-playlist would not accept anymore arguments.

Linux v2.36 | macOS v0.20 | Termux v2.36
Made a check to make sure there is no yt-playlist running before starting yt-playlist. If you open two yt-playlist, it can cause issues.
Updated the install.sh on Linux/macOS/Termux to check and see if yt-playlist is running before installing.
If you type in the wrong argument you will get an error message now, before yt-playlist would just start. Also you can only type in one argument at a time.

v2.35.4
Updated Termux only.
Updated the Termux install command. It now checks to see if git is installed, if true then skips install. This will speed up the automated install.

v2.35.3
Updated Termux only.
Fixed sed commands in Termux install.sh

v2.35.2
Now at Main menu when cover art notifications enabled it say it's on.